--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ html, body {
   font-family: monospace;
   
   background: linear-gradient(120DEG,#1DB954,#808080)
-
+  
+  font-size: 40px;
   
 }
 
