--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
   
   font-family: monospace;
   
-  background: linear-gradient(120DEG,#1DB954,#808080)
+  background: linear-gradient(120DEG,#1DB954,#808080);
   
   font-size: 30px;
   
