--- a/style.css
+++ b/style.css
@@ -26,3 +26,11 @@ img{
   max-width: 100%;
   height: auto;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
